--- a/index.html
+++ b/index.html
@@ -91,6 +91,18 @@
       </p>
     </div>
 
+    <div class="project">
+  <h3>Auto-Typer Bot</h3>
+  <p>
+    Types any message at 1000+ WPM. Works in any text field. Built with pyautogui.
+  </p>
+  <p>
+    <a href="https://github.com/Gurenn99/auto-typer-bot" target="_blank">
+      GitHub → Live
+    </a>
+  </p>
+</div>
+    
     <h2>Skills</h2>
     <ul>
       <li><span class="badge">Python</span><span class="badge">Git & GitHub</span></li>
